src/styles/blocks/header.scss
.header {
  background-image: url(../images/hero-bg-cookie.png);
  background-position-y: 75%;
  background-position-x: 50%;
  background-repeat: no-repeat;
  background-size: 290px;

  @include on-tablet {
    background-position-y: 36%;
    background-size: 326px;
  }

  @include on-desktop {
    background-position-y: 57%;
    background-size: 544px;
  }

  @include on-desktop-lg {
    background-position-y: center;
    background-size: 584px;
  }

  &__content {
    height: 100vh;
    max-height: 700px;
    display: grid;
    grid-template-rows: max-content 1fr;
  }

  &__menu {
    display: none;

    @include on-desktop{
      display: block;
    }
  }

  &__hero {
    padding-block: 32px 40px;
    height: 100%;

    @include page-grid;

    justify-items: center;
    grid-template-rows: max-content 1fr max-content;

    @include on-tablet {
      padding-block: 80px 228px;
      grid-template-rows: 1fr 2fr max-content;
    }

    @include on-desktop {
      padding-block: 0;
      grid-template-rows: 1fr 1fr 1fr;
    }
  }

  &__description {
    max-width: 288px;
    margin: 0;
    margin-bottom: 32px;
    text-align: center;
    grid-row: 1;
    grid-column: 1 / -1;

    @include on-tablet {
      grid-column: 1 / 5;
      text-align: left;
      justify-self: flex-start;
      margin: 0;
    }

    @include on-desktop {
      grid-column: 1 / 3;
      margin-top: auto;
    }

    @include on-desktop-lg {
      margin-bottom: 16px;
    }
  }

  &__title {
    font-family: inherit;
    font-size: 64px;
    font-weight: 400;
    line-height: 85%;
    letter-spacing: -0.05em;
    text-align: center;
    text-transform: uppercase;
    margin: 0;
    margin-bottom: auto;
    grid-row: 2;
    grid-column: 1 / -1;

    @include on-tablet {
      font-size: 80px;
      margin-bottom: 65px;
      padding-top: 36px;
    }

    @include on-desktop {
      font-size: 136px;
      padding-top: 12px;
      letter-spacing: -0.06em;
    }

    @include on-desktop-lg {
      font-size: 144px;
      padding-top: 22px;
      letter-spacing: -0.04em;
    }
  }

  &__btn {
    grid-row: 3;
    grid-column: 1 / -1;

    @include on-tablet {
      grid-column: 3 / 7;
    }

    @include on-desktop {
      grid-column: 1 / 3;
      margin-bottom: auto;
    }
  }
}

